[gd_scene load_steps=31 format=2]

[ext_resource path="res://Scripts/HomeScene/HomeScene.gd" type="Script" id=1]
[ext_resource path="res://Resources/UI Elements/Buttons/Clicked/leaderboard_yellow.png" type="Texture" id=2]
[ext_resource path="res://Resources/UI Elements/Window/button_text_background.png" type="Texture" id=3]
[ext_resource path="res://Resources/UI Elements/Buttons/BeforeClick/leaderboard_yellow.png" type="Texture" id=4]
[ext_resource path="res://Resources/Sprites/Background/menu.png" type="Texture" id=5]
[ext_resource path="res://Resources/UI Elements/Buttons/BeforeClick/endless_mode_play.png" type="Texture" id=6]
[ext_resource path="res://Resources/UI Elements/Buttons/Clicked/play_green.png" type="Texture" id=7]
[ext_resource path="res://Resources/Fonts/cloudy_home_screen_headings.tres" type="DynamicFont" id=8]
[ext_resource path="res://Resources/UI Elements/Buttons/BeforeClick/setting_yellow.png" type="Texture" id=9]
[ext_resource path="res://Resources/UI Elements/Buttons/Clicked/setting_yellow.png" type="Texture" id=10]
[ext_resource path="res://admob-lib/admob.gd" type="Script" id=11]
[ext_resource path="res://Resources/Sprites/Sounds/normal_button_click.wav" type="AudioStream" id=12]
[ext_resource path="res://Resources/Sprites/Sounds/background_audio_menu.wav" type="AudioStream" id=13]
[ext_resource path="res://Resources/UI Elements/Buttons/Clicked/achievements.png" type="Texture" id=14]
[ext_resource path="res://Resources/UI Elements/Buttons/BeforeClick/achievements.png" type="Texture" id=15]
[ext_resource path="res://Resources/UI Elements/GameName/Spell the magic Final Image.png" type="Texture" id=16]
[ext_resource path="res://Resources/UI Elements/Buttons/BeforeClick/store_blue.png" type="Texture" id=17]
[ext_resource path="res://Resources/UI Elements/Buttons/Clicked/store_blue.png" type="Texture" id=18]
[ext_resource path="res://Resources/UI Elements/GameName/Charmer Final Image.png" type="Texture" id=19]
[ext_resource path="res://Resources/UI Elements/Buttons/BeforeClick/play_green.png" type="Texture" id=20]
[ext_resource path="res://Resources/UI Elements/Buttons/Clicked/endless_mode_play.png" type="Texture" id=21]
[ext_resource path="res://Resources/Fonts/cloudy_potion_count.tres" type="DynamicFont" id=22]
[ext_resource path="res://Resources/UI Elements/GameName/Word Final Image.png" type="Texture" id=23]
[ext_resource path="res://Resources/Fonts/cloudy_locked_endless_mode_heading.tres" type="DynamicFont" id=24]
[ext_resource path="res://Resources/Vector Parts/Wizard_SCML/wizard_ice_cs4_11.png" type="Texture" id=25]
[ext_resource path="res://Resources/Themes/Dimbo Regular24.tres" type="DynamicFont" id=26]
[ext_resource path="res://Resources/UI Elements/Buttons/Chest_01_Unlocked.png" type="Texture" id=27]
[ext_resource path="res://Resources/UI Elements/Buttons/Chest_01_Locked.png" type="Texture" id=28]
[ext_resource path="res://Resources/UI Elements/Buttons/Chest_01_Locked_disabled.png" type="Texture" id=29]

[sub_resource type="Animation" id=1]
resource_name = "daily_reward_animation"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.8 ), Vector2( 0.85, 0.85 ) ]
}

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 2.00195
anchor_bottom = 2.56
margin_left = -1.0
rect_scale = Vector2( 0.5, 0.4 )
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StoryMode" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.492
anchor_right = 0.5
anchor_bottom = 0.492
margin_left = -196.484
margin_top = -3.17126
margin_right = 403.516
margin_bottom = 156.828
rect_scale = Vector2( 0.7, 0.4 )
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndlessMode" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.681
anchor_right = 0.5
anchor_bottom = 0.681
margin_left = -192.246
margin_top = -10.6
margin_right = 436.754
margin_bottom = 162.4
rect_scale = Vector2( 0.7, 0.4 )
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeaderBoardButton" type="TextureButton" parent="."]
anchor_left = 0.141
anchor_top = 0.902
anchor_right = 0.141
anchor_bottom = 0.902
margin_left = -36.4833
margin_top = -33.8728
margin_right = 141.517
margin_bottom = 146.128
rect_scale = Vector2( 0.4, 0.4 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsButton" type="TextureButton" parent="."]
anchor_left = 0.225
anchor_top = 0.906
anchor_right = 0.225
anchor_bottom = 0.906
margin_left = -35.4993
margin_top = -36.2728
margin_right = 142.501
margin_bottom = 143.728
rect_scale = Vector2( 0.4, 0.4 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AchievementButton" type="TextureButton" parent="."]
anchor_left = 0.059
anchor_top = 0.906
anchor_right = 0.059
anchor_bottom = 0.906
margin_left = -35.6697
margin_top = -36.2729
margin_right = 142.33
margin_bottom = 143.727
rect_scale = Vector2( 0.4, 0.4 )
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="play_green" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.491
anchor_right = 0.5
anchor_bottom = 0.491
margin_left = -224.412
margin_top = -17.6953
margin_right = 1054.59
margin_bottom = 250.305
rect_scale = Vector2( 0.35, 0.35 )
texture_normal = ExtResource( 20 )
texture_pressed = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="replay_green" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.671
anchor_right = 0.5
anchor_bottom = 0.671
margin_left = -224.412
margin_top = -22.5728
margin_right = 658.588
margin_bottom = 157.427
rect_scale = Vector2( 0.51, 0.51 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 21 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StoryModeLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.499
anchor_right = 0.5
anchor_bottom = 0.499
margin_left = -112.799
margin_top = 3.11777
margin_right = 180.201
margin_bottom = 54.1178
custom_fonts/font = ExtResource( 8 )
text = "STORY MODE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndlessModeLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.683
anchor_right = 0.5
anchor_bottom = 0.683
margin_left = -115.0
margin_top = -0.800018
margin_right = 212.0
margin_bottom = 43.2
custom_fonts/font = ExtResource( 8 )
text = "ENDLESS MODE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndlessModeLabelLocked" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.683
anchor_right = 0.5
anchor_bottom = 0.683
margin_left = -82.6546
margin_top = -6.80002
margin_right = 188.345
margin_bottom = 37.2
custom_fonts/font = ExtResource( 24 )
text = "Endless Mode"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndlessModeLockedText" type="Label" parent="."]
visible = false
anchor_left = 0.504
anchor_top = 0.676
anchor_right = 0.504
anchor_bottom = 0.676
margin_left = -42.3492
margin_top = 32.4729
margin_right = 120.651
margin_bottom = 48.4729
custom_fonts/font = ExtResource( 22 )
text = "Unlocks at Level 10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StoreButton" type="TextureButton" parent="."]
anchor_left = 0.93
anchor_top = 0.883
anchor_right = 0.93
anchor_bottom = 0.883
margin_left = -64.6548
margin_top = -58.7909
margin_right = 113.345
margin_bottom = 121.209
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.7, 0.7 )
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 18 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AdMob" type="Node" parent="."]
script = ExtResource( 11 )
is_real = true

[node name="NormalButtonClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[node name="BackgroundAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = 10.0

[node name="WordImage" type="TextureRect" parent="."]
anchor_left = 0.489
anchor_top = 0.093
anchor_right = 0.489
anchor_bottom = 0.093
margin_left = -137.427
margin_top = -21.8546
margin_right = 1236.57
margin_bottom = 461.145
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 23 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharmerImage" type="TextureRect" parent="."]
anchor_left = 0.497
anchor_top = 0.102
anchor_right = 0.497
anchor_bottom = 0.102
margin_left = -248.299
margin_top = 61.6007
margin_right = 2352.7
margin_bottom = 602.601
rect_scale = Vector2( 0.19, 0.19 )
texture = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpellTheMagicImage" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.138
anchor_right = 0.5
anchor_bottom = 0.138
margin_left = 144.747
margin_top = -0.0399475
margin_right = 1890.75
margin_bottom = 331.96
rect_scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HatImage" type="TextureRect" parent="."]
anchor_left = 0.504
anchor_top = 0.133
anchor_right = 0.504
anchor_bottom = 0.133
margin_left = -301.706
margin_top = 36.9361
margin_right = -23.7057
margin_bottom = 264.936
rect_rotation = -33.6
rect_scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 25 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DailyRewardButton" type="TextureButton" parent="."]
anchor_left = 0.097
anchor_top = 0.669
anchor_right = 0.097
anchor_bottom = 0.669
margin_left = -82.1827
margin_top = -57.7553
margin_right = 45.8173
margin_bottom = 70.2447
rect_scale = Vector2( 0.8, 0.8 )
disabled = true
texture_normal = ExtResource( 28 )
texture_pressed = ExtResource( 27 )
texture_disabled = ExtResource( 29 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RewardAnimation" type="AnimationPlayer" parent="DailyRewardButton"]
anims/daily_reward_animation = SubResource( 1 )

[node name="DailyRewardTime" type="Label" parent="."]
anchor_left = 0.098
anchor_top = 0.674
anchor_right = 0.098
anchor_bottom = 0.674
margin_left = -81.2067
margin_top = 46.6
margin_right = 8.79328
margin_bottom = 80.6
custom_fonts/font = ExtResource( 26 )
text = "Collect"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="StoryMode" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="EndlessMode" to="." method="_on_EndlessMode_pressed"]
[connection signal="button_up" from="LeaderBoardButton" to="." method="_on_LeaderBoardButton_button_up"]
[connection signal="button_up" from="SettingsButton" to="." method="_on_SettingsButton_button_up"]
[connection signal="button_up" from="AchievementButton" to="." method="_on_AchievementButton_button_up"]
[connection signal="button_up" from="play_green" to="." method="_on_play_green_button_up"]
[connection signal="button_up" from="replay_green" to="." method="_on_replay_green_button_up"]
[connection signal="button_up" from="StoreButton" to="." method="_on_StoreButton_button_up"]
[connection signal="rewarded" from="AdMob" to="." method="_on_AdMob_rewarded"]
[connection signal="button_up" from="DailyRewardButton" to="." method="_on_DailyRewardButton_button_up"]
